--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Seth Taylor">
   <meta name="description" content="se coffee shop">
   <meta name="keywords" content="coffe shop">
-  <link rel="favcon" href="favicon.ico">
+  <link rel="favicon" href="favicon.ico">
   <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="page">
-  ><header class="header">
+  <header class="header">
 
   </header>
   <main class="content">
