--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
     </nav>
     <h1 class="header__title"><span class="header__span-accent">Specialty coffee</span>in the Triple Peaks Library</h1>
-    <p class="header__discription">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
+    <p class="header__description">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
     <img src="./images/inside_coffee_shop.png"
     alt="ilastration of a coffeeshop"
     class="header__image">
@@ -51,11 +51,11 @@
 your home-brewing convenience:</p>
       <ul class="recipes__videos">
         <li>
-          <iframe class="recipes__iframes" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=mIbXgnVK4_cfI6ZS" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=mIbXgnVK4_cfI6ZS" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <p class="recipes__video-caption"><span>Aeropress recipe</span> <span>~5min</span></p>
         </li>
         <li>
-          <iframe class="recipes__iframes" src="https://www.youtube.com/embed/st571DYYTR8?si=VupZSBo090F53x7N" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=VupZSBo090F53x7N" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <p class="recipes__video-caption"><span>French press recipe</span> <span>~15min</span></p>
         </li>
       </ul>
