--- a/index.html
+++ b/index.html
@@ -60,7 +60,29 @@ your home-brewing convenience:</p>
         </li>
       </ul>
     </section>
-    <section id="reservation" class="reservation"></section>
+    <section id="reservation" class="reservation">
+      <h2 class="form__title">Book a table</h2>
+      <form class="reservation__form form">
+        <fieldset class="form__fieldset">
+          <label for="Name" class="form__label">Name *
+          <input type="text" id="Name" required class="form__input" placeholder="Name Surname">
+          </label>
+          <label for="number" class="form__label">Number of guests *
+          <input type="number" min="1" max="8" id="number" required class="form__input" placeholder="1-8">
+          </label>
+          <label for="date" class="form__label">Date & time *
+          <input type="datetime-local" id="date" required class="form__input">
+          </label>
+          <label for="email" class="form__label">Your email *
+          <input type="email" id=email required class="form__input" placeholder="email@email.com">
+          </label>
+        </fieldset>
+          <button type="submit" class="form__button">Book a table</button>
+          <label for="terms" class="form__label form__label_type_checkbox">
+          <input type="checkbox" id="terms" required class="form__checkbox">
+          I agree with the terms of use</label>
+      </form>
+    </section>
     <section id="menu" class="menu"></section>
     <section id="about" class="about"></section>
   </main>
