--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ your home-brewing convenience:</p>
       </ul>
     </section>
     <section id="reservation" class="reservation">
-      <h2 class="form__title">Book a table</h2>
+      <h2 class="reservation">Book a table</h2>
       <form class="reservation__form form">
         <fieldset class="form__fieldset">
           <label for="Name" class="form__label">Name *
