--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ your home-brewing convenience:</p>
   <footer class="footer">
     <div class="footer__content">
       <img src="./images/logo_coffeeshop_light.svg" alt="footer_logo" class="footer__logo">
-      <div class="footer_column">
+      <div class="footer__column">
         <h3 class="footer__column-heading">Social media</h3>
         <ul class="footer__list">
           <li class="footer__list-item">
